Add balance api method
