# swagger/swagger.yml
@@ -572,6 +572,47 @@ paths:
           description: Internal error
       tags:
         - Accounts
+  '/v2/data/{platform}/{network}/accounts/balances/{accountId}':
+    get:
+      operationId: getAccountBalanceList
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: platform
+          description: Not used
+          required: true
+          type: string
+        - in: path
+          name: network
+          description: Not used
+          required: true
+          type: string
+        - in: path
+          name: accountId
+          required: true
+          type: string
+        - in: query
+          name: from
+          required: true
+          type: integer
+        - in: query
+          name: to
+          type: integer
+          required: true
+      responses:
+        '200':
+          description: Query compatibility endpoint for account balances
+          schema:
+            items:
+              $ref: '#/definitions/AccountBalance'
+            type: array
+        '400':
+          description: Bad request
+        '404':
+          description: Not Found
+      tags:
+        - Accounts
   '/v2/data/{platform}/{network}/blocks':
     get:
       operationId: getBlocksList
@@ -2172,14 +2213,22 @@ definitions:
   Protocol:
     properties:
       hash:
-       type: string
+        type: string
       startBlock:
-       type: integer
-       format: int64
+        type: integer
+        format: int64
       endBlock:
-       type: integer
-       format: int64
+        type: integer
+        format: int64
     required:
       - hash
       - startBlock
       - endBlock
+  AccountBalance:
+    properties:
+      timestamp:
+        type: integer
+        format: int64
+      balance:
+        type: integer
+        format: int64
